frontend/micro-ui/web/micro-ui-internals/packages/css/src/digitv2/components/appContainerV2.scss
@import url("../index.scss");

.app-container {
  @extend .light-background;
  width: 100%;

  form {
    .card {
      max-width: 960px;

      h2 {
        @extend .light-text-color-primary;
        text-align: left;
      }

      .field-container {
      }

      button {
        @extend .light-primary-button;
        max-width: 240px;
      }

      .input-otp-wrap,
      .card-text-button {
        @extend .light-primary-button;
        text-align: left;
      }
    }
  }
}

@screen dt {
  .employee-app-container {
    @apply w-full;
  }

  .app-container {
    width: 100%;

    form {
      .card {
        max-width: 960px;

        h2 {
          text-align: left;
        }

        .field-container {
          max-width: 540px;
        }

        button {
          max-width: 240px;
        }

        .input-otp-wrap,
        .card-text-button {
          text-align: left;
        }
      }
    }
  }
}

